--- a/package.json
+++ b/package.json
@@ -3,16 +3,24 @@
   "version": "0.0.1-3",
   "private": true,
   "scripts": {
+    "prestar": "npm install",
     "start": "node app"
   },
   "dependencies": {
-    "express": "3.0.0rc3",
-    "jade": "*",
-    "socket.io": "~0.9.10"
+    "socket.io": "^1.3.5",
+    "method-override": "~2.3.2",
+    "serve-favicon": "~2.2.0",
+    "morgan": "~1.5.2",
+    "errorhandler": "~1.3.5",
+    "express-session": "~1.10.4",
+    "body-parser": "~1.12.2",
+    "express": "~4.12.3",
+    "jade": "~1.9.2",
+    "multer": "~0.1.8"
   },
   "subdomain": "jlmonteagudo-cam",
   "engines": {
-    "node": "0.8.x",
-    "npm": "1.1.x"
+    "node": "0.12.x",
+    "npm": "2.x.x"
   }
 }
