--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1-3",
   "private": true,
   "scripts": {
-    "prestar": "npm install",
+    "prestart": "npm install",
     "start": "node app"
   },
   "dependencies": {
