--- a/package.json
+++ b/package.json
@@ -7,16 +7,16 @@
     "start": "node app"
   },
   "dependencies": {
-    "socket.io": "^1.3.5",
-    "method-override": "~2.3.2",
-    "serve-favicon": "~2.2.0",
-    "morgan": "~1.5.2",
-    "errorhandler": "~1.3.5",
-    "express-session": "~1.10.4",
     "body-parser": "~1.12.2",
+    "errorhandler": "~1.3.5",
     "express": "~4.12.3",
+    "express-session": "^1.11.1",
     "jade": "~1.9.2",
-    "multer": "~0.1.8"
+    "method-override": "~2.3.2",
+    "morgan": "~1.5.2",
+    "multer": "~0.1.8",
+    "serve-favicon": "~2.2.0",
+    "socket.io": "^1.3.5"
   },
   "subdomain": "jlmonteagudo-cam",
   "engines": {
