--- a/package.json
+++ b/package.json
@@ -7,15 +7,15 @@
     "start": "node app"
   },
   "dependencies": {
-    "body-parser": "~1.12.2",
-    "errorhandler": "~1.3.5",
-    "express": "~4.12.3",
+    "body-parser": "^1.13.2",
+    "errorhandler": "^1.4.1",
+    "express": "^4.13.1",
     "express-session": "^1.11.1",
-    "jade": "~1.9.2",
+    "jade": "^1.11.0",
     "method-override": "~2.3.2",
-    "morgan": "~1.5.2",
+    "morgan": "^1.6.1",
     "multer": "~0.1.8",
-    "serve-favicon": "~2.2.0",
+    "serve-favicon": "^2.3.0",
     "socket.io": "^1.3.5"
   },
   "subdomain": "jlmonteagudo-cam",
